fix user page navigation
