# transcendence-app/src/user/user.controller.ts
@@ -46,6 +46,7 @@ import {
 } from './constants';
 import { UpdateUserDto } from './dto/update-user.dto';
 import { ApiFile } from '../shared/decorators/api-file.decorator';
+import { UserAvatarDto } from './dto/user.avatar.dto';
 
 export const AvatarFileInterceptor = LocalFileInterceptor({
   fieldName: 'file',
@@ -163,12 +164,7 @@ export class UserController {
   @ApiConsumes('multipart/form-data')
   @ApiFile('file')
   @ApiProduces('image/jpeg')
-  @ApiOkResponse({
-    schema: {
-      type: 'file',
-      format: 'binary',
-    },
-  })
+  @ApiOkResponse({ description: 'Update a user avatar', type: UserAvatarDto })
   @ApiUnprocessableEntityResponse({ description: 'Unprocessable Entity' })
   @ApiPayloadTooLargeResponse({ description: 'Payload Too Large' })
   @ApiServiceUnavailableResponse({ description: 'Service Unavailable' })
@@ -177,7 +173,7 @@ export class UserController {
     @GetUser() user: User,
     @UploadedFile()
     file: Express.Multer.File,
-  ): Promise<StreamableFile> {
+  ): Promise<UserAvatarDto> {
     if (!file) {
       throw new UnprocessableEntityException();
     }
